[metadata]
name = SHARKFin
version = 0.0.1
author = Example Author
author_email = author@example.com
description = Simulating Heterogenous Agents with Finance
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sbenthall/SHARKFin
project_urls =
    Bug Tracker = https://github.com/sbenthall/SHARKFin/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = sharkfin
packages = find:
python_requires = >=3.9

[options.packages.find]
where = sharkfin